some fixes +deleted not needed scripts

--- a/css/global.css
+++ b/css/global.css
@@ -723,6 +723,7 @@ section {
     max-width: 900px;
     margin: 0 auto;
     padding: 100px 0;
+    color: #000;
 }
 
     .fs-menu-products-box > ul {
