--- a/css/about-us-en.css
+++ b/css/about-us-en.css
@@ -32,14 +32,14 @@
     .h1.gold span {
         display: inline-block;
         color: #c39680;
-        background: url(/images/about-us/gold-bg.jpg) no-repeat center;
+        background: url(../images/about-us/gold-bg.jpg) no-repeat center;
         background-size: 100% 100%;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 
 .sec1 {
-    background: #fffbf5 url(/images/about-us/s1-bg.jpg) no-repeat bottom center;
+    background: #fffbf5 url(../images/about-us/s1-bg.jpg) no-repeat bottom center;
     background-size: 100% auto;
     padding-top: 75px;
 }
@@ -77,7 +77,7 @@
         top: 0;
         width: 1.5em;
         height: 100%;
-        background: url(/images/about-us/v-icon.png) left center no-repeat;
+        background: url(../images/about-us/v-icon.png) left center no-repeat;
         background-size: contain;
     }
 
@@ -94,7 +94,7 @@
 }
 
 .sec2 {
-    background: #000 url(/images/about-us/s2-bg.jpg) no-repeat bottom center;
+    background: #000 url(../images/about-us/s2-bg.jpg) no-repeat bottom center;
     background-size: 100% auto
 }
 
@@ -118,7 +118,7 @@
     }
 
 .sec4 {
-    background: #fff url(/images/about-us/s4-bg.jpg) no-repeat bottom center;
+    background: #fff url(../images/about-us/s4-bg.jpg) no-repeat bottom center;
     background-size: 100% auto
 }
 
@@ -148,19 +148,19 @@
     }
 
     .fact:nth-child(1)::after {
-        background-image: url(/images/about-us/s4-icon-1.png)
+        background-image: url(../images/about-us/s4-icon-1.png)
     }
 
     .fact:nth-child(2)::after {
-        background-image: url(/images/about-us/s4-icon-2.png)
+        background-image: url(../images/about-us/s4-icon-2.png)
     }
 
     .fact:nth-child(3)::after {
-        background-image: url(/images/about-us/s4-icon-3.png)
+        background-image: url(../images/about-us/s4-icon-3.png)
     }
 
 .sec5 {
-    background: #000 url(/images/about-us/s5-bg.jpg) no-repeat center;
+    background: #000 url(../images/about-us/s5-bg.jpg) no-repeat center;
     background-size: 100% auto
 }
 
