--- a/css/home-en.css
+++ b/css/home-en.css
@@ -13,7 +13,7 @@
     .iot-list {position: relative; width: 100%;}
     .iot-pic {width: 100%;}
     .iot-list .iot-btn {position:absolute; width: 100%; text-align: center;}
-        .iot-btn .xd-btn {border:none; background: transparent url(/images/cta-iot.png) no-repeat center; background-size: 100% auto; color:#fff; font-size: 3.5vw; padding: 0.6em 3em; font-weight: 600;}
+        .iot-btn .xd-btn {border:none; background: transparent url(../images/cta-iot.png) no-repeat center; background-size: 100% auto; color:#fff; font-size: 3.5vw; padding: 0.6em 3em; font-weight: 600;}
         .iot-1 .iot-btn {top:8%}
         .iot-2 .iot-btn {bottom:8%}
     a.float-click {width:100%; height: 100%; position:absolute; z-index:5; top:0; left:0}
@@ -35,10 +35,10 @@
 .bnf-info .h3 {text-transform: uppercase; font-size: 3.2vw; white-space: nowrap;}
 .bnf-info {padding-left: 14vw; position: relative; margin: 6vw auto;}
 .bnf-info::before {content:""; position: absolute; top:0; left:0; background-repeat: no-repeat; background-size: contain; width: 12vw; height: 12vw;}
-    .wicon-1::before {background-image: url(/images/bnf-icon-1.png)}
-    .wicon-2::before {background-image: url(/images/bnf-icon-2.png)}
-    .wicon-3::before {background-image: url(/images/bnf-icon-3.png)}
-    .wicon-4::before {background-image: url(/images/bnf-icon-4.png)}
+    .wicon-1::before {background-image: url(../images/bnf-icon-1.png)}
+    .wicon-2::before {background-image: url(../images/bnf-icon-2.png)}
+    .wicon-3::before {background-image: url(../images/bnf-icon-3.png)}
+    .wicon-4::before {background-image: url(../images/bnf-icon-4.png)}
 .why-cta .xd-btn {font-size: 3vw; padding:0.5em 3em;}
 .why-pic .bnf-pic {display: none; width: 100%;}
 
