--- a/css/live-en.css
+++ b/css/live-en.css
@@ -168,7 +168,7 @@ section {
     .s1-phone .abs {position: absolute; top:0; left:0}
     .s1-slogan {position: absolute; width: 100%; text-align: center; top:21%}
     .video-btn {position: absolute; text-align: center; width: 100%; bottom: 10%; z-index: 2;}
-        .vd-btn {font-weight:600; background:url(/images/live/icon-play.png) no-repeat center right; background-size: contain; padding: 0.15em 2em 0.15em 0;
+        .vd-btn {font-weight:600; background:url(../images/live/icon-play.png) no-repeat center right; background-size: contain; padding: 0.15em 2em 0.15em 0;
     }
     .s1-icons {display: flex; max-width: 54%; flex-wrap:wrap; align-items: flex-start; justify-content: center;}
         .s1-icon {width: calc(100%/6); text-align: center; padding: 0 1.5%; font-size: 1.8vw;}
@@ -257,20 +257,20 @@ section {
 .xd-btn {font-size: 2.2vw;}
 
 .ts-info .h2::before {background-position: top right; background-repeat: no-repeat; background-size: contain;}
-.ts-info .h2.ticon-1::before {background-image: url(/images/live/sicon-1.png)}
-.ts-info .h2.ticon-2::before {background-image: url(/images/live/sicon-2.png)}
-.ts-info .h2.ticon-3::before {background-image: url(/images/live/sicon-3.png)}
-.ts-info .h2.ticon-4::before {background-image: url(/images/live/sicon-4.png)}
-.ts-info .h2.ticon-5::before {background-image: url(/images/live/sicon-5.png)}
-.ts-info .h2.ticon-6::before {background-image: url(/images/live/sicon-6.png)}
-.ts-info .h2.ticon-7::before {background-image: url(/images/live/sicon-7.png)}
-.ts-info .h2.ticon-8::before {background-image: url(/images/live/sicon-8.png)}
-.ts-info .h2.ticon-9::before {background-image: url(/images/live/sicon-9.png)}
-.ts-info .h2.ticon-10::before {background-image: url(/images/live/sicon-10.png)}
-.ts-info .h2.ticon-11::before {background-image: url(/images/live/sicon-11.png)}
-.ts-info .h2.ticon-12::before {background-image: url(/images/live/sicon-12.png)}
-.ts-info .h2.ticon-13::before {background-image: url(/images/live/sicon-13.png)}
-.ts-info .h2.ticon-14::before {background-image: url(/images/live/sicon-14.png)}
+.ts-info .h2.ticon-1::before {background-image: url(../images/live/sicon-1.png)}
+.ts-info .h2.ticon-2::before {background-image: url(../images/live/sicon-2.png)}
+.ts-info .h2.ticon-3::before {background-image: url(../images/live/sicon-3.png)}
+.ts-info .h2.ticon-4::before {background-image: url(../images/live/sicon-4.png)}
+.ts-info .h2.ticon-5::before {background-image: url(../images/live/sicon-5.png)}
+.ts-info .h2.ticon-6::before {background-image: url(../images/live/sicon-6.png)}
+.ts-info .h2.ticon-7::before {background-image: url(../images/live/sicon-7.png)}
+.ts-info .h2.ticon-8::before {background-image: url(../images/live/sicon-8.png)}
+.ts-info .h2.ticon-9::before {background-image: url(../images/live/sicon-9.png)}
+.ts-info .h2.ticon-10::before {background-image: url(../images/live/sicon-10.png)}
+.ts-info .h2.ticon-11::before {background-image: url(../images/live/sicon-11.png)}
+.ts-info .h2.ticon-12::before {background-image: url(../images/live/sicon-12.png)}
+.ts-info .h2.ticon-13::before {background-image: url(../images/live/sicon-13.png)}
+.ts-info .h2.ticon-14::before {background-image: url(../images/live/sicon-14.png)}
 
 /** POPUP **/
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
@@ -313,7 +313,7 @@ section {
     flex-basis: 100%;
     width: 0;
   }
-.ts-info-col {width: 47%;}
+.ts-info-col {width: 48%;}
 .ts-info {height: 125vw;}
 .ts-info .h2 {padding: 1.5vw 0;}
 .popup-wrap {width: 76%;}
@@ -331,7 +331,7 @@ section {
     .vd-btn {font-size: 1.2vw;}
     .s1-phone {width:53%}
 .sec2 {padding-bottom: 0;}
-    .s2-phone {width:18%; margin-top:4vw;}
+    .s2-phone {width:18%; margin-top:6vw;}
     .s2-phone img:nth-child(1) {left:-5%; position: relative;}
         .s2-phone .abs {top:-15%; left:10%}
     .s3-phone-pic {width:68%; margin-top:-1.5%;}
@@ -373,9 +373,6 @@ section {
 .ts-info {height: 53vw;}
 }
 
-@media (min-width:1366px) {
-    .ts-info {height: 44vw;}
-}
 .sec3 {padding-bottom: 0;}
 
 /** review **/
