about us translation

--- a/css/about-us-en.css
+++ b/css/about-us-en.css
@@ -36,6 +36,7 @@
         background-size: 100% 100%;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
+        text-transform: uppercase;
     }
 
 .sec1 {
