--- a/css/live-en.css
+++ b/css/live-en.css
@@ -271,6 +271,7 @@ section {
 .ts-info .h2.ticon-12::before {background-image: url(../images/live/sicon-12.png)}
 .ts-info .h2.ticon-13::before {background-image: url(../images/live/sicon-13.png)}
 .ts-info .h2.ticon-14::before {background-image: url(../images/live/sicon-14.png)}
+.ts-info .h2.ticon-15::before {background-image: url(../images/icon/operation.png)}
 
 /** POPUP **/
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
